# KnowLedger

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  index.html  robots.txt  search_index.en.js  settings.gradle  settings.gradle.kts  sitemap.xml
.github/workflows/: build-site.yml  misc.yml
Bench-Results/: combined_results 27-02-2020.txt  combined_results 28-02-2020.txt  serialization_results.txt  sorting_results 29-02-2020.txt
agent/: build.gradle.kts
agent-core/: build.gradle.kts
agent-publish/: build.gradle.kts
agent/ontologies/: build.gradle.kts
agent/publish/: build.gradle.kts
annotations/: build.gradle.kts
architecture/: index.html
base64-extensions/: build.gradle.kts
bench-results/2020-08-22/: Cortex-A72_sorting_2020-08-22.csv  i7-8550U_sorting_2020-08-22.csv
benchmarks/: build.gradle.kts
blockchain/: build.gradle.kts
buildSrc/: build.gradle.kts
collections-extensions/: build.gradle.kts
common/: build.gradle.kts
encoding-extensions/: build.gradle.kts
example/: build.gradle.kts
generation/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
graph/: Cargo.toml
graph/src/: input.rs  main.rs
introduction/: index.html
ledger/: build.gradle.kts
ledger-core/: build.gradle.kts
ledger-core/crypto/: build.gradle.kts
ledger-core/data/: build.gradle.kts
ledger-core/db/: build.gradle.kts
ledger-crypto/: build.gradle.kts
ledger-orient/: build.gradle.kts
ledger/core/: build.gradle.kts
py/: hash.py
results/: build.gradle.kts
site/: config.toml
testing/: build.gradle.kts
(+1922 files in other folders)
